# zlibutils-svn-to-git

trunk/builds/: CMakeLists.txt
trunk/builds/linux/.kdev4/: linux.kdev4
trunk/builds/win/libzutils/: libzutils.sln
trunk/builds/win/libzutils/Debug/: libzutils.exp  libzutils.ilk  libzutils.lib
trunk/builds/win/libzutils/Release/: libzutils.exp  libzutils.lib
trunk/builds/win/libzutils/libzutils/: libzutils.vcxproj  libzutils.vcxproj.filters  zutils.def
trunk/builds/win/libzutils/libzutils/Debug/: libzutils.lastbuildstate  vc110.idb
trunk/builds/win/libzutils/libzutils/Release/: libzutils.lastbuildstate
trunk/include/: zutils.hpp
trunk/libs/libiconv/lib/: libiconv_a.lib  libiconv_a_debug.lib
trunk/libs/libpcre/include/: config.h
trunk/libs/libpcre/lib/: pcre.lib  pcrecpp.lib  pcrecppd.lib  pcred.lib
trunk/libs/libzip/include/: zipconf.h
trunk/libs/libzip/lib/: zip.lib
trunk/src/: zutils.hpp~  zutils_cnv.cpp  zutils_cnv.cpp~  zutils_conn.cpp  zutils_conn.cpp~  zutils_io.cpp  zutils_rgx.cpp  zutils_str.cpp  zutils_str.cpp~  zutils_str_T.hpp~  zutils_ustr.hpp  zutils_ustr.hpp~  zutils_xml.cpp
